# lumiq

./: .gitignore  .openclaude-profile.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSPECTION_COMPLETE.md  INSPECTION_SUMMARY.md  PRIORITY1_STATUS.md  PROJECT_ANALYSIS.md  README.md  README_INSPECTION.md  SECURITY.md  SUPPORT.md  bugs.md  electron-builder.yml  electron.vite.config.1778568980995.mjs  electron.vite.config.ts  eslint.config.js  filter_modified.py  nextPlan.md  package-lock.json  package.json  prompt.md  prompt.txt  remaningPlan.md  requiredTools.md  strengths.md  tsconfig.node.json  tsconfig.web.json  typecheck.js  vitest.config.ts
.github/: CICD_SETUP.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  (+1 more)
HelloWorld/: pom.xml
docs/: api-integration.md  architecture.md  ide-feature-proposals.md  plan.md  prd.md  srs.md  ui-design.md  user-manual.md
native/: Cargo.toml  index.d.ts  index.js  package-lock.json  package.json
native/src/: ast.rs  chunker.rs  lib.rs  scanner.rs  search.rs  similarity.rs
prompts/: AGENT_STRATEGY.md  INTEGRATION_GUIDE.md  QUICK_REFERENCE.md  README.md  SETUP_SUMMARY.md  architecture-agent.prompt.md  debugger-agent.prompt.md  documentation-agent.prompt.md  feature-research-agent.prompt.md  integration-agent.prompt.md  performance-agent.prompt.md  project-explorer-agent.prompt.md  security-agent.prompt.md  testing-agent.prompt.md
tech_vidvan_lm/: architecture.md  data.md  eval.md  references.md  tech_lm_ideology.md
testCases/: README_TESTS.md  TEST_CASES.md  TEST_CASES_CODE_EXAMPLES.md  TEST_SUMMARY.md
(+233 files in other folders)
